天気予報の場所を表示

--- a/app/views/weather/_show.html.erb
+++ b/app/views/weather/_show.html.erb
@@ -4,6 +4,7 @@
 </div>
 
 <div class="weather-info">
+  <p class="locate_city">場所: <%= @locate_prefecture %><%= @locate_city %></p>
   <p class="weather">天気: <%= @weather %></p>
   <p class="weather_img">天気画像: <img src="<%= @weather_image %>"></p>
   <p class="celsius_max">最高気温: <%= @celsius_max %></p>
