--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Apitest</title>
+    <title>Weather App</title>
+    <%= favicon_link_tag("favicon.ico") %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
