--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
 <header class="weather-header">
-  <h1 class="title"><%= @weather_time %> Weather</h1>
+  <h1 class="title"><%= t(".#{@weather_time}") %><%= t(".weather") %></h1>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </header>
