--- a/app/views/weather/_show.html.erb
+++ b/app/views/weather/_show.html.erb
@@ -1,5 +1,5 @@
 <div class="daily-weather">
-  <p class="today"><%= link_to t(".today"), :controller => "weather", :action => "today" %></p>
+  <p class="today"><%= link_to t(".today"), :controller => "weather", :action => "today" %>1</p>
   <p class="tomorrow"><%= link_to t(".tomorrow"), :controller => "weather", :action => "tomorrow" %></p>
 </div>
 
