--- a/app/assets/stylesheets/weather.scss
+++ b/app/assets/stylesheets/weather.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/*ヘッダーの設定*/
 .weather-header{
   display: flex;
   justify-content: center;
@@ -17,14 +18,41 @@
   align-items: center;
 }
 
+/*today ボタンの設定*/
 .today{
+  display: block;
+  color: #FFF;
+  text-decoration: none;
+  text-align: center;
+  background-color: #f39800;
+  border-radius: 5px;
+  -weabkit-transition: all 0.5s;
+  transition: all 0.5s;
   margin: 10px;
 }
 
+.today:hover{
+  background-color: #f9c500;
+}
+
+/*tomorrow ボタンの設定*/
 .tomorrow{
+  display: block;
+  color: #FFF;
+  text-decoration: none;
+  text-align: center;
+  background-color: #f39800;
+  border-radius: 5px;
+  -weabkit-transition: all 0.5s;
+  transition: all 0.5s;
   margin: 10px;
 }
 
+.tomorrow:hover{
+  background-color: #f9c500;
+}
+
+/*weather-infoの表示場所を設定*/
 .weather-info{
   display: flex;
   flex-direction: column;
@@ -32,6 +60,7 @@
   align-items: center;
 }
 
+/*温度の文字の設定*/
 .celsius_max{
   color: #f90;
 }
@@ -40,6 +69,7 @@
   color: #09f;
 }
 
+/*セレクトボックスの位置を設定*/
 .select-cities{
   display: flex;
   flex-direction: column;
