--- a/app/views/weather/_show.html.erb
+++ b/app/views/weather/_show.html.erb
@@ -1,6 +1,6 @@
 <div class="daily-weather">
-  <p class="today"><%= link_to t(".today"), :controller => "weather", :action => "today" %>(<%= @today%>)</p>
-  <p class="tomorrow"><%= link_to t(".tomorrow"), :controller => "weather", :action => "tomorrow" %>(<%= @tomorrow %>)</p>
+  <p><%= button_to t(".today"), {:controller => "weather", :action => "today"}, {method: :get, class: "today"} %></p>
+  <p><%= button_to t(".tomorrow"), {:controller => "weather", :action => "tomorrow"}, {method: :get, class: "tomorrow"} %></p>
 </div>
 
 <div class="weather-info">
