ボタンの色を変更

--- a/app/assets/stylesheets/weather.scss
+++ b/app/assets/stylesheets/weather.scss
@@ -21,10 +21,9 @@
 /*today ボタンの設定*/
 .today{
   display: block;
-  color: #FFF;
   text-decoration: none;
   text-align: center;
-  background-color: #f39800;
+  background-color: #FFA500;
   border-radius: 5px;
   -weabkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -38,10 +37,9 @@
 /*tomorrow ボタンの設定*/
 .tomorrow{
   display: block;
-  color: #FFF;
   text-decoration: none;
   text-align: center;
-  background-color: #f39800;
+  background-color: #FFA500;
   border-radius: 5px;
   -weabkit-transition: all 0.5s;
   transition: all 0.5s;
