--- a/app/views/weather/today.html.erb
+++ b/app/views/weather/today.html.erb
@@ -1,3 +1,6 @@
-<%= render "layouts/header"%>
-<%= render "show" %>
-<%= render "search" %>
+<div id="wrapper">
+  <%= render "layouts/header"%>
+  <%= render "show" %>
+  <%= render "search" %>
+  <%= render "layouts/footer"%>
+</div>
