--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <div class="weather-footer">
-    <%= link_to t(".author"), "https://twitter.com/kkz__52", :style=>"color:white" %>
+    <%= link_to t(".developer"), "https://twitter.com/kkz__52", :style=>"color:white" %>
     <%= link_to t(".github"), "https://github.com/KKZoo/apitest", :style=>"color:white" %>
   </div>
 </footer>
