--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,5 +2,6 @@
   <div class="weather-footer">
     <%= link_to t(".developer"), "https://twitter.com/kkz__52", :style=>"color:white" %>
     <%= link_to t(".github"), "https://github.com/KKZoo/apitest", :style=>"color:white" %>
+    <%= link_to "OpenWeatherMapAPI", "https://openweathermap.org/", :style=>"color:white" %>
   </div>
 </footer>
