--- a/app/views/weather/_show.html.erb
+++ b/app/views/weather/_show.html.erb
@@ -6,9 +6,9 @@
 <section class="weather-info">
 <dl class="weather-info-contents">
   <div class="weather-info-item"><dt class="locate-city"><%= t(".locate") %>:</dt></div>
-  <div class="weather-info-description"><dd class="locate-city"><%= "#{@locate_prefecture}\n" %></dd><dd class="locate-city"><%= @locate_city %></dd></div>
+  <div class="weather-info-description"><dd class="locate-city"><%= t(".#{ @locate_prefecture }") %></dd></div>
   <div class="weather-info-item"><dt class="weather"><%= t(".weather") %>:</dt></div>
-  <div class="weather-info-description"><dd class="weather"><%= @weather %></dd></div>
+  <div class="weather-info-description"><dd class="weather"><%= t(".#{ @weather }") %></dd></div>
   <div class="weather-info-item"><dt class="weather-img"> <%= t(".weather_image") %>:</dt></div>
   <div class="weather-info-description"><dd class="weather-img"><img src="<%= @weather_image %>"></dd></div>
   <div class="weather-info-item"><dt class="celsius-max"><%= t(".celsius_max") %>:</dt></div>
