--- a/app/views/weather/today.html.erb
+++ b/app/views/weather/today.html.erb
@@ -1,12 +1,1 @@
-<% if @weather.include?("雨")==true || @weather.include?("rain")==true%>
-  <div class="rain">
-<% else %>
-  <div class="sky">
-<% end %>
-<div id="wrapper">
-  <%= render "layouts/header"%>
-  <%= render "show" %>
-  <%= render "search" %>
-  <%= render "layouts/footer"%>
-</div>
-</div>
+<%= render "template" %>
